# drf-redesign

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  django.yml  pylint.yml  python-publish.yml  ruff.yml
drf_redesign/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
drf_redesign/templates/drf_redesign/: branding.html  nav-items.html  title.html
drf_redesign/templates/rest_framework/: api.html  login.html  raw_data_form.html
drf_redesign/templates/rest_framework/filters/: base.html  ordering.html  search.html
drf_redesign/templates/rest_framework/horizontal/: checkbox.html  input.html  radio.html  select.html  textarea.html
drf_redesign/templates/rest_framework/inline/: fieldset.html  form.html  input.html  radio.html
drf_redesign/templates/rest_framework/pagination/: numbers.html  previous_and_next.html
drf_redesign/templates/rest_framework/vertical/: radio.html  select_multiple.html  textarea.html
drf_redesign/templatetags/: __init__.py  drf_redesign.py  rest_framework_redesign.py
rest_framework_redesign/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
rest_framework_redesign/templates/rest_framework/: api.html  login.html  raw_data_form.html
rest_framework_redesign/templates/rest_framework/filters/: base.html  ordering.html  search.html
rest_framework_redesign/templates/rest_framework/horizontal/: checkbox.html  checkbox_multiple.html  dict_field.html  fieldset.html  input.html  list_field.html  list_fieldset.html  radio.html  select.html  select_multiple.html  textarea.html
rest_framework_redesign/templates/rest_framework/inline/: checkbox.html  dict_field.html  input.html  list_fieldset.html  select.html  select_multiple.html  textarea.html
rest_framework_redesign/templates/rest_framework/pagination/: numbers.html  previous_and_next.html
rest_framework_redesign/templatetags/: __init__.py
(+8 files in other folders)
