[tool.poetry]
name = "rest-framework-redesign"
version = "0.1.9"
description = "Redesign of the browsable api of Django REST Framework"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rest_framework_redesign"}]
homepage = "https://github.com/youzarsiph/rest-framework-redesign/"
repository = "https://github.com/youzarsiph/rest-framework-redesign/"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
djangorestframework = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
