[tool.poetry]
name = "rest-framework-redesign"
version = "0.2.8"
description = "Redesign of the browse-able api of Django REST Framework with Bootstrap 5"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rest_framework_redesign"}]
homepage = "https://github.com/youzarsiph/rest-framework-redesign/"
repository = "https://github.com/youzarsiph/rest-framework-redesign/"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
djangorestframework = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
