[tool.poetry]
name = "drf-redesign"
version = "0.4.0"
description = "Redesign of the browse-able api of Django REST Framework with Bootstrap 5"
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "drf_redesign"}]
homepage = "https://github.com/youzarsiph/drf-redesign/"
repository = "https://github.com/youzarsiph/drf-redesign/"

[tool.poetry.dependencies]
python = ">=3.7"
django = ">=3.0"
djangorestframework = ">=3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
